--- a/src/sass/theme/_theme-class.scss
+++ b/src/sass/theme/_theme-class.scss
@@ -3,6 +3,11 @@
     max-width: 1365px;
     padding: 0 15px;
 }
+
+.absolute {
+    position: absolute !important;
+}
+
 // End Container Size Defiend
 
 // Start Normal Hover Transtion Effect
